fix: Change incorrect path route in product
